# tap-arbeidsplassen

./: .gitignore  LICENSE  README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: test.yml
nb_small/lemmatizer/: cfg  model
nb_small/morphologizer/: cfg  model
nb_small/vocab/: strings.json
tap_arbeidsplassen/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_arbeidsplassen/nb_small/: config.cfg  meta.json
tap_arbeidsplassen/nb_small/ner/: moves
tap_arbeidsplassen/nb_small/parser/: model
tap_arbeidsplassen/nb_small/senter/: model
tests/: __init__.py  test_core.py
tests/data/: final_page_response.json  initial_page_response.json
