[tool.poetry]
name = "tap-arbeidsplassen"
version = "0.0.1"
description = "Singer tap for arbeidsplassen, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["henning <hho@cerx.co>"]
keywords = [
    "ELT",
    "arbeidsplassen",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
singer-sdk = { version="~=0.42.1", extras = ["faker",] }
fs-s3fs = { version = "~=1.1.1", optional = true }
requests = "~=2.32.3"
spacy = ">=3.5.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=8"
singer-sdk = { version="~=0.42.1", extras = ["testing"] }
responses = "~=0.24.0"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.pytest.ini_options]
addopts = '--durations=10'

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-arbeidsplassen = 'tap_arbeidsplassen.tap:Taparbeidsplassen.cli'
